--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <div id='description'>
           <h1 id='fish'>><(((('></h1>
           <h1 id='title'>Nothing to see here</h1>
-          <h2 id='otherText'>Lorem Ipsum</h2>
+          <h2 id='otherText'>¯\_(ツ)_/¯</h2>
         </div>
       </div>
     </div>
